Fix jumbotron mobile version

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -817,6 +817,9 @@ label{
 }
 
 @media (max-width: 1000px) {
+  .jumbotron{
+    height: 500px;
+  }
 
   .jumbotron .h1, .jumbotron h1 {
     font-size: 42px;
@@ -843,6 +846,9 @@ label{
 }
 
 @media (max-width: 800px) {
+  .jumbotron{
+    height: 480px;
+  }
 
   .jumbotron p {
     display: none;
@@ -851,6 +857,9 @@ label{
 }
 
 @media (max-width: 500px) {
+  .jumbotron{
+    height: 430px;
+  }
 
   .jumbotron-intro {
       top: 75px;
